refactor: Add BrowserHistoryService
